fix rtl titles alignment

--- a/app/globals.css
+++ b/app/globals.css
@@ -13,7 +13,7 @@ body {
   background: #fff;
   color: #111;
   overflow-x: hidden;
-  direction: ltr;
+  direction: rtl;
   font-family: Arial, Helvetica, sans-serif;
 }
 
